--- a/railway.yml
+++ b/railway.yml
@@ -6,4 +6,13 @@ services:
       - "443:443"
       - "8545:8545"
       - "8546:8546"
+      - "30303:30303"
     NODE_ID: "node1"
+  meticulous-surprise:
+    build: .
+    ports:
+      - "8080:80"
+      - "443:443"
+      - "8545:8545"
+      - "8546:8546"
+    NODE_ID: "node2"
